--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,6 @@ build:
   verbosity: minimal
   
 install:
-  - git clone -b %APPVEYOR_REPO_BRANCH% --recurse-submodules https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
-  - git checkout -q %APPVEYOR_REPO_COMMIT%
-  - git submodule update --init --recursive
+  - sh: git clone -b %APPVEYOR_REPO_BRANCH% --recurse-submodules https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
+  - sh: git checkout -q %APPVEYOR_REPO_COMMIT%
+  - sh: git submodule update --init --recursive
